--- a/pages/admin.html
+++ b/pages/admin.html
@@ -27,7 +27,7 @@
       </div>
       <nav class="main-nav admin-nav" aria-label="Secciones del panel">
         <a href="#resumen" class="nav-link active">Resumen</a>
-        <a href="#cotizaciones" class="nav-link">Cotizaciones</a>
+        <a href="#cotizaciones" class="nav-link">Comisiones</a>
         <a href="#usuarios" class="nav-link">Usuarios</a>
       </nav>
       <div class="header-actions">
@@ -47,30 +47,30 @@
       <section class="admin-card" id="cotizaciones" aria-labelledby="cotizaciones-title">
         <div class="card-header">
           <div>
-            <h2 id="cotizaciones-title">Cotizaciones pendientes</h2>
-            <p class="card-subtitle">
-              Revisa las comisiones pendientes por mecánico para saber quién falta por pagar.
-            </p>
-          </div>
-          <p class="card-subtitle" id="pending-commissions-summary">Sin cotizaciones pendientes.</p>
+            <h2 id="cotizaciones-title">Comisiones pendientes</h2>
+          <p class="card-subtitle">
+            Revisa las comisiones pendientes por mecánico para saber quién falta por pagar.
+          </p>
         </div>
+        <p class="card-subtitle" id="pending-commissions-summary">Sin comisiones pendientes.</p>
+      </div>
 
-        <div class="table-container" role="region" aria-live="polite">
-          <table class="admin-table admin-table--compact">
-            <thead>
-              <tr>
-                <th scope="col">Mecánico</th>
-                <th scope="col">Cotizaciones pendientes</th>
-                <th scope="col">Monto adeudado</th>
-                <th scope="col">Detalle</th>
-              </tr>
-            </thead>
-            <tbody id="pending-commissions-body"></tbody>
-          </table>
-          <div id="pending-commissions-empty" class="empty-state" hidden>
-            <p>No hay cotizaciones pendientes en este momento.</p>
-          </div>
+      <div class="table-container" role="region" aria-live="polite">
+        <table class="admin-table admin-table--compact">
+          <thead>
+            <tr>
+              <th scope="col">Mecánico</th>
+              <th scope="col">Comisiones pendientes</th>
+              <th scope="col">Monto adeudado</th>
+              <th scope="col">Detalle</th>
+            </tr>
+          </thead>
+          <tbody id="pending-commissions-body"></tbody>
+        </table>
+        <div id="pending-commissions-empty" class="empty-state" hidden>
+          <p>No hay comisiones pendientes en este momento.</p>
         </div>
+      </div>
       </section>
 
       <section class="admin-card" id="usuarios" aria-labelledby="usuarios-title">
