--- a/pages/terminos-y-condiciones.html
+++ b/pages/terminos-y-condiciones.html
@@ -70,7 +70,10 @@
                         plataforma se destina a Mechapp como parte del modelo de servicio y mantenimiento. Asimismo, el
                         abono inicial que realiza el cliente se distribuye de la siguiente manera: el 50% se dirige a
                         Mechapp para la gestión y aseguramiento del servicio, y el restante continúa su curso habitual
-                        en el proceso de pago.
+                        en el proceso de pago. Si transcurren 15 días naturales desde la ejecución del servicio sin que
+                        se haya generado el pago de la comisión correspondiente, Mechapp podrá suspender temporalmente
+                        la publicación de nuevos servicios del mecánico y aplicar cargos administrativos adicionales
+                        por reactivación.
                     </p>
                 </section>
                 <section>
