Add warning for overdue commission payments

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -264,6 +264,10 @@
             <div class="commissions-cta__content">
                 <h2>Comisiones pendientes</h2>
                 <p>Consulta tus cobros pendientes y completa el pago directamente desde la plataforma.</p>
+                <p class="commissions-cta__warning">
+                    Si no pagas tus comisiones en un plazo de 15 días, tu cuenta podría ser suspendida
+                    temporalmente.
+                </p>
             </div>
             <a class="button button--primary" href="./comisionesPendientes.html">Ver mis comisiones</a>
         </section>
